--- a/lesson20/employer_app/templates/employer_app/vacancy_detail.html
+++ b/lesson20/employer_app/templates/employer_app/vacancy_detail.html
@@ -9,7 +9,7 @@
     <h1>Vacancy Detail</h1>
 
     <p><a href="{% url 'create_resume' %}">Create Resume</a></p>
-    <p><a href="{% url 'update_resume' resume_slug.slug %}">Update Resume</a></p>
+<!--    <p><a href="{% url 'update_resume' resume_slug.slug %}">Update Resume</a></p>-->
     <p><a href="{% url 'delete_resume' %}">Delete Resume</a></p>
 
 
