--- a/lesson20/employer_app/templates/employer_app/vacancy_update.html
+++ b/lesson20/employer_app/templates/employer_app/vacancy_update.html
@@ -1,10 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'employer_app/base.html' %}
+{% block title %}
+    Category Page
+{% endblock %}
 
-</body>
-</html>
+{% block content %}
+
+<form method="POST">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Update</button>
+</form>
+<br>
+<p><a href="{% url 'resume_list' %}">back to resume list</a></p>
+
+{% endblock content %}
