--- a/lesson20/applicant_app/templates/applicant_app/vacancy_list.html
+++ b/lesson20/applicant_app/templates/applicant_app/vacancy_list.html
@@ -5,14 +5,14 @@
 {% endblock %}
 
 {% block content %}
-
+<div class="div_vacancy_list">
     <h1>Vacancy List</h1>
     {% for vacancy, resume in vacancy_list, resume_list %}
         <p>{{ vacancy }}</p>
-        <p><a href="{% url 'vacancy_detail' vacancy.slug resume.pk %}">Details</a></p>
+        <p><a href="{% url 'vacancy_detail' vacancy.slug %}">Details</a></p>
     {% endfor %}
 
     <br>
     <p><a href="{% url 'main' %}">Back</a></p>
-
+</div>
 {% endblock content %}
