--- a/lesson20/employer_app/templates/employer_app/base.html
+++ b/lesson20/employer_app/templates/employer_app/base.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %} {% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'app/css/style.css' %}">
 </head>
 <body>
-     <div style="width: 300px; margin: auto; margin-top: 50px;">
+     <div class="main_div">
         {% block content %}
         {% endblock content %}
     </div>
