--- a/lesson20/employer_app/templates/employer_app/resume_detail.html
+++ b/lesson20/employer_app/templates/employer_app/resume_detail.html
@@ -9,7 +9,7 @@
     <h1>Resume List</h1>
 
     <p><a href="{% url 'vacancy_create' %}">Create Vacancy</a></p>
-    <p><a href="">Update Vacancy</a></p>
+    <p><a href="{% url 'vacancy_update' resume_slug.pk %}">Update Vacancy</a></p>
     <p><a href="{% url 'vacancy_delete' %}">Delete Vacancy</a></p>
 
     <p>{{ resume_slug.name_vacancy }}</p>
