--- a/lesson20/applicant_app/templates/applicant_app/resume_delete.html
+++ b/lesson20/applicant_app/templates/applicant_app/resume_delete.html
@@ -6,6 +6,7 @@
 
 {% block content %}
 
+<div class="div_resume_delete">
     <h1>Resume delete</h1>
 
     <form method="POST">
@@ -17,5 +18,5 @@
     </form>
 
     <p><a href="{% url 'vacancy_list' %}">Back to Vacancy List</a></p>
-
+</div>
 {% endblock content %}
