--- a/lesson20/applicant_app/templates/applicant_app/resume_update.html
+++ b/lesson20/applicant_app/templates/applicant_app/resume_update.html
@@ -6,14 +6,13 @@
 
 {% block content %}
 
-    <h1>Resume Update</h1>
-
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Update</button>
-</form>
-<br>
-<p><a href="{% url 'vacancy_list' %}">back to vacancy list</a></p>
-
+<div class="div_resume_update">
+    <form method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Update</button>
+    </form>
+    <br>
+    <p><a href="{% url 'vacancy_list' %}">back to vacancy list</a></p>
+</div>
 {% endblock content %}
