--- a/lesson20/employer_app/templates/employer_app/resume_detail.html
+++ b/lesson20/employer_app/templates/employer_app/resume_detail.html
@@ -6,6 +6,7 @@
 
 {% block content %}
 
+<div class="div_resume_detail">
     <h1>Resume List</h1>
 
     <p><a href="{% url 'vacancy_create' %}">Create Vacancy</a></p>
@@ -25,5 +26,6 @@
     <br>
     <p><a href="{% url 'main' %}">Back</a></p>
     <p><a href="{% url 'resume_list' %}">Back to Resume List</a></p>
+</div>
 
 {% endblock content %}
