--- a/lesson20/employer_app/templates/employer_app/resume_list.html
+++ b/lesson20/employer_app/templates/employer_app/resume_list.html
@@ -6,6 +6,7 @@
 
 {% block content %}
 
+<div class="div_resume_list">
     <h1>Resume List</h1>
 
     {% for resume in resume_list %}
@@ -15,5 +16,5 @@
 
     <br>
     <p><a href="{% url 'main' %}">Back</a></p>
-
+</div>
 {% endblock content %}
