--- a/lesson20/employer_app/templates/employer_app/vacancy_delete.html
+++ b/lesson20/employer_app/templates/employer_app/vacancy_delete.html
@@ -6,8 +6,8 @@
 
 {% block content %}
 
+<div class="div_vacancy_delete">
     <h1>Vacancy delete</h1>
-    <br>
 
     <form method="POST">
         {% csrf_token %}
@@ -18,15 +18,6 @@
     </form>
     <br>
     <p><a href="{% url 'resume_list' %}">back to resume list</a></p>
-
-<!--    <form method="POST">-->
-<!--        {% csrf_token %}-->
-<!--        <p>Удаление по имени вакансии</p>-->
-<!--        <input type="text" name="name_vacancy">-->
-<!--        <br><br>-->
-<!--        <button type="submit">Delete</button>-->
-<!--    </form>-->
-
-<!--    <p><a href="{% url 'resume_list' %}">Back to Resume List</a></p>-->
+</div>
 
 {% endblock content %}
